// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Radio Controlled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c6 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c5:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-checked={true}
          aria-invalid={false}
          aria-required={false}
          checked={true}
          className="c3 c1"
          disabled={false}
          id="radio-1"
          onChange={[Function]}
          required={false}
          type="radio"
        />
        <div
          checked={true}
          className="c4 c5"
          disabled={false}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
           
          I am controlled and checked
           
        </span>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-checked={false}
          aria-invalid={false}
          aria-required={false}
          checked={false}
          className="c3 c1"
          disabled={false}
          id="radio-2"
          onChange={[Function]}
          required={false}
          type="radio"
        />
        <div
          checked={false}
          className="c4 c5"
          disabled={false}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
           
          I am controlled and unchecked
           
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Radio 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c6 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c5:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="c3 c1"
          disabled={false}
          id="radio"
          required={false}
          type="radio"
        />
        <div
          className="c4 c5"
          disabled={false}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
           
          I am a radio button
           
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to defaultChecked 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c6 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c5:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="c3 c1"
          defaultChecked={true}
          disabled={false}
          id="radio"
          required={false}
          type="radio"
        />
        <div
          className="c4 c5"
          disabled={false}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
           
          I am checked by default
           
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to disabled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c6 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
  opacity: 0.3333;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #e4e7eb;
  background-color: #e4e7eb;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #e4e7eb;
  background-color: #f0f2f5;
}

.c1 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={true}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="c3 c1"
          disabled={true}
          id="radio-1"
          required={false}
          type="radio"
        />
        <div
          className="c4 c5"
          disabled={true}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={true}
          fontSize="medium"
        >
           
          I am disabled
           
        </span>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={true}
      >
        <input
          aria-checked={true}
          aria-invalid={false}
          aria-required={false}
          checked={true}
          className="c3 c1"
          disabled={true}
          id="radio-2"
          required={false}
          type="radio"
        />
        <div
          checked={true}
          className="c4 c5"
          disabled={true}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={true}
          fontSize="medium"
        >
           
          I am disabled
           
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to error 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c6 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c5:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #cc1439;
  background-color: #cc1439;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #cc1439;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={true}
          aria-required={false}
          className="c3 c1"
          disabled={false}
          id="radio"
          required={false}
          type="radio"
        />
        <div
          className="c4 c5"
          disabled={false}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
           
          I am error
           
        </span>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={true}
          aria-required={false}
          className="c3 c1"
          defaultChecked={true}
          disabled={false}
          id="radio"
          required={false}
          type="radio"
        />
        <div
          className="c4 c5"
          disabled={false}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
           
          I am error
           
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to required 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c6 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  margin-right: 8px;
  border-radius: 50%;
  border: solid 1px;
  position: relative;
  top: 4px;
}

.c5:before {
  cursor: pointer;
  content: '';
  display: none;
  position: relative;
  left: 4px;
  top: 4px;
  width: 2px;
  height: 2px;
  background: #ffffff;
  border: 2px solid #ffffff;
  border-radius: 50%;
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={true}
          className="c3 c1"
          disabled={false}
          id="radio"
          required={true}
          type="radio"
        />
        <div
          className="c4 c5"
          disabled={false}
        />
        <span
          className="c6"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
           
          I am a radio button
           
        </span>
      </label>
    </div>
  </div>
</div>
`;
